@startuml

title __VIEWHOLDERS's Class Diagram__\n

  namespace com.example.habit_tracker {
    namespace viewholders {
      class com.example.habit_tracker.viewholders.TextGrantViewHolder {
          - accept : Button
          - deny : Button
          - friendName : TextView
          + TextGrantViewHolder()
          + getAccept()
          + getDeny()
          + getFriendName()
      }
    }
  }
  

  namespace com.example.habit_tracker {
    namespace viewholders {
      class com.example.habit_tracker.viewholders.TextProgressViewHolder {
          - progressBar : ProgressBar
          - progressButton : Button
          - textView : TextView
          + TextProgressViewHolder()
          + getProgressBar()
          + getProgressButton()
          + getTextView()
      }
    }
  }
  

  namespace com.example.habit_tracker {
    namespace viewholders {
      class com.example.habit_tracker.viewholders.TextSearchViewHolder {
          - request : Button
          - userName : TextView
          + TextSearchViewHolder()
          + getRequest()
          + getUserName()
      }
    }
  }
  

  namespace com.example.habit_tracker {
    namespace viewholders {
      class com.example.habit_tracker.viewholders.TextViewHolder {
          - textView : TextView
          + TextViewHolder()
          + getTextView()
      }
    }
  }
  

  com.example.habit_tracker.viewholders.TextGrantViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.habit_tracker.viewholders.TextProgressViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.habit_tracker.viewholders.TextSearchViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.habit_tracker.viewholders.TextViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
